Initial draft for a Hantek driver based on Siglent. Still untested.

--- a/scopehal/CMakeLists.txt
+++ b/scopehal/CMakeLists.txt
@@ -93,6 +93,7 @@ set(SCOPEHAL_SOURCES
 	PicoOscilloscope.cpp
 	RigolOscilloscope.cpp
 	SiglentSCPIOscilloscope.cpp
+	HantekSCPIOscilloscope.cpp
 	SignalGeneratorOscilloscope.cpp
 	TektronixOscilloscope.cpp
 	RohdeSchwarzOscilloscope.cpp
